New store method 'import', POST /anno/import, swagger, #2
